<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etPhone"
            android:hint="@string/hintPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            android:textSize="34sp"
            android:inputType="phone"
            app:met_baseColor="@color/colorWhite"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@color/colorWhite"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etName"
            android:hint="@string/hintName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            android:textSize="34sp"
            android:inputType="textPersonName"
            app:met_baseColor="@color/colorWhite"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorWhite"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:textColorHint="@color/colorWhite"
            android:textSize="34sp"
            app:met_baseColor="@color/colorWhite"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorWhite"
            app:met_singleLineEllipsis="true" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:text="@string/btnSignUp"
        android:textAllCaps="false"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:background="@drawable/rounded_button_signup"
        style="?android:attr/borderlessButtonStyle"/>

</RelativeLayout>